# docs/swagger.json
@@ -1251,6 +1251,102 @@
                         "name": "zoom",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Full-text search",
+                        "name": "search_query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Utility company alias",
+                        "name": "utility_company",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Category alias",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Exact room count",
+                        "name": "room_count",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Min price",
+                        "name": "min_price",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Max price",
+                        "name": "max_price",
+                        "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Facilities aliases",
+                        "name": "facilities",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Min area, sq.m",
+                        "name": "min_square",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Max area, sq.m",
+                        "name": "max_square",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Min floor",
+                        "name": "min_flat_floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Max floor",
+                        "name": "max_flat_floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Min building floors",
+                        "name": "min_building_floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Max building floors",
+                        "name": "max_building_floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Exclude 1st floor",
+                        "name": "not_first_floor",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Exclude last floor",
+                        "name": "not_last_floor",
+                        "in": "query"
                     }
                 ],
                 "responses": {
